# chess_toolkit

./: AUTHORS  MANUAL.html  MANUAL.md  Makefile.am  Makefile.in  NEWS  README.md  THANKS  aclocal.m4  config.h.in  configure  configure.ac
examples/: Makefile.am  Makefile.in
examples/.deps/: filter_position-filter_position.Po
examples/add_eco/: add_eco.rb
examples/filter_position/: Makefile.am  Makefile.in  filter_position.c
examples/ruby_gem/: README.md  Rakefile
examples/ruby_gem/ext/chess_toolkit/: chess_toolkit.c  chess_toolkit_rb.h  ct_game_tags_rb.c  ct_graph_rb.c  ct_move_rb.c  ct_position_rb.c  extconf.rb
examples/ruby_gem/test/: test_ct_game_tags.rb  test_ct_graph.rb  test_ct_move.rb  test_ct_position.rb  us_women_in_2012_olympiad.pgn
lib/: Makefile.am  Makefile.in  chess_toolkit.h  chess_toolkit_init.c  ct_bit_board.c  ct_bit_board_to_s.c  ct_command.c  ct_debug_utilities.c  ct_error.c  ct_game_tags.c  ct_graph.c  ct_graph_dfs.c  ct_graph_from_pgn.c  ct_graph_position.c  ct_graph_to_new_pgn.c  ct_move.c  ct_move_command.c  ct_move_generator.c  ct_move_maker.c  ct_move_reader.c  ct_move_stack.c  ct_move_writer.c  ct_pawn.c  ct_pgn_parser.y  ct_pgn_scanner.l  ct_piece.c  ct_piece_command.c  ct_position.c  ct_position_from_fen.c  ct_position_hash.c  ct_position_rules.c  ct_position_to_fen.c  ct_position_to_s.c  ct_rays.c  ct_slider.c  ct_square.c  ct_steper.c  ct_undo_position.c  ct_utilities.c  libchesstoolkit.la
lib/chess_toolkit/: ct_bit_board.h  ct_command.h  ct_error.h  ct_game_tags.h  ct_graph.h  ct_move.h  ct_move_command.h  ct_move_stack.h  ct_piece.h  ct_piece_command.h  ct_position.h  ct_square.h  ct_types.h
lib/internal_headers/: ct_debug_utilities.h  ct_graph_private.h  ct_move_generator.h  ct_move_maker.h  ct_pawn.h  ct_pgn_reader.h  ct_position_private.h  ct_rays.h  ct_slider.h  ct_steper.h  ct_types_internal.h  ct_undo_position.h  ct_utilities.h
maintainer/: draw_dependencies.rb  indent.pro  notes.txt  uci.txt
tests/: Makefile.am  Makefile.in  at_algebraic_notation.c  at_perft.c  candidates2013.pgn  check_main.c  check_mg_piece.c  check_mg_piece.h  check_utilities.c  check_utilities.h  ut_bit_board.c  ut_bit_board_to_s.c  ut_command.c  ut_debug_utilities.c  ut_error.c  ut_game_tags.c  ut_graph.c  ut_graph_dfs.c  ut_graph_from_pgn.c  ut_graph_position.c  ut_graph_to_new_pgn.c  ut_move.c  ut_move_command.c  ut_move_generator.c  ut_move_maker.c  ut_move_reader.c  ut_move_stack.c  ut_move_writer.c  ut_pawn.c  ut_piece.c  ut_piece_command.c  ut_position.c  ut_position_from_fen.c  ut_position_hash.c  ut_position_rules.c  ut_position_to_fen.c  ut_position_to_s.c  ut_rays.c  ut_slider.c  ut_square.c  (+3 more)
