lib_LTLIBRARIES = libchess_toolkit.la
AM_CFLAGS = -Ichess_toolkit -Iinternal_headers
AM_YFLAGS = -d
BUILT_SOURCES = ct_pgn_parser.h
libchess_toolkit_la_SOURCES = \
    chess_toolkit/ct_bit_board.h \
    chess_toolkit/ct_command.h \
    chess_toolkit/ct_error.h \
    chess_toolkit/ct_game_tags.h \
    chess_toolkit/ct_graph.h \
    chess_toolkit/ct_move.h \
    chess_toolkit/ct_move_command.h \
    chess_toolkit/ct_move_stack.h \
    chess_toolkit/ct_piece.h \
    chess_toolkit/ct_piece_command.h \
    chess_toolkit/ct_position.h \
    chess_toolkit/ct_square.h \
    chess_toolkit/ct_types.h \
    chess_toolkit.h \
    ct_bit_board.c \
    ct_bit_board_to_s.c \
    ct_command.c \
    ct_debug_utilities.c \
    ct_error.c \
    ct_game_tags.c \
    ct_graph.c \
    ct_graph_dfs.c \
    ct_graph_from_pgn.c \
    ct_graph_position.c \
    ct_graph_to_new_pgn.c \
    chess_toolkit_init.c \
    ct_move.c \
    ct_move_command.c \
    ct_move_generator.c \
    ct_move_maker.c \
    ct_move_reader.c \
    ct_move_stack.c \
    ct_move_writer.c \
    ct_pawn.c \
    ct_pgn_parser.y \
    ct_pgn_scanner.l \
    ct_piece.c \
    ct_piece_command.c \
    ct_position.c \
    ct_position_from_fen.c \
    ct_position_hash.c \
    ct_position_rules.c \
    ct_position_to_fen.c \
    ct_position_to_s.c \
    ct_rays.c \
    ct_slider.c \
    ct_square.c \
    ct_steper.c \
    ct_undo_position.c \
    ct_utilities.c \
    internal_headers/ct_debug_utilities.h \
    internal_headers/ct_graph_private.h \
    internal_headers/ct_move_generator.h \
    internal_headers/ct_move_maker.h \
    internal_headers/ct_pawn.h \
    internal_headers/ct_pgn_reader.h \
    internal_headers/ct_position_private.h \
    internal_headers/ct_rays.h \
    internal_headers/ct_slider.h \
    internal_headers/ct_steper.h \
    internal_headers/ct_types_internal.h \
    internal_headers/ct_undo_position.h \
    internal_headers/ct_utilities.h
include_HEADERS = chess_toolkit.h
pkginclude_HEADERS = \
    chess_toolkit/ct_types.h \
    chess_toolkit/ct_error.h \
    chess_toolkit/ct_square.h \
    chess_toolkit/ct_piece.h \
    chess_toolkit/ct_bit_board.h \
    chess_toolkit/ct_piece_command.h \
    chess_toolkit/ct_position.h \
    chess_toolkit/ct_move.h \
    chess_toolkit/ct_move_command.h \
    chess_toolkit/ct_move_stack.h \
    chess_toolkit/ct_command.h \
    chess_toolkit/ct_graph.h \
    chess_toolkit/ct_game_tags.h
